[package]
name = "alivescript_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.20.0"

[dependencies]
lalrpop-util = { version = "0.20.0", features = ["unicode", "lexer"] }
logos = "0.12.0"
once_cell = "1.18.0"
thiserror = "1.0.47"
