[package]
name = "alivescript_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
# game = ["bevy"]
py = ["dep:pyo3"]

[build-dependencies]
lalrpop = "0.20.0"

[dependencies.uuid]
version = "1.6.1"
features = ["v4", "fast-rng"]

[dependencies]
derive-new = "0.6.0"
lalrpop-util = { version = "0.20.0", features = ["unicode", "lexer"] }
logos = "0.12.0"
once_cell = "1.18.0"
thiserror = "1.0.47"
unindent = "0.2.3"
derive-getters = "0.3.0"
console = "0.15.7"
pyo3 = { version = "0.19.2", features = ["auto-initialize"], optional = true }
# bevy = { version = "0.13.2", optional = true }

# console = { version = "0.15.7", optional = true }
#
# [features]
# build-binary = ["dep:console"]
#
# [[bin]]
# name = "alivescript_rust"
# required-features = ["build-binary"]
